# stockbot_2021

./: .gitignore  README.md  db_connection.txt  requirements.txt  setup.cfg
results/1_lstm_msla/: config.json  model.h5  scaler.pkl
results/1_lstm_ptrade/: config.json  model.h5  scaler.pkl  trade_log.txt
results/4_lstm_long/: config.json  model.h5  scaler.pkl  trade_log.txt
src/: ptrade_alp_lstm1.py
src/lib/: activations.py  alpaca_exceptions.py  alpaca_historical.py  alpaca_paper.py  database.py  discord_scraper.py  losses.py  price_history.py  stock_dataset.py  util.py
src/nb/data_process/: download_data.ipynb  download_quotes.ipynb  download_trades.ipynb
src/nb/test/: account_tests.ipynb  database_test.ipynb  discord_scraper.ipynb  live_data_inspection.ipynb  marketwatch_game.ipynb  n_leading_nan.ipynb  price_history.ipynb  quotes_tests.ipynb  show_performance.ipynb  stock_dataset.ipynb  trade_data_tests.ipynb
src/nb/trade/: ptrade_alp_lstm1.ipynb
src/nb/train/: 1_lstm_ptrade.ipynb  2_lstm_hr.ipynb
src/stockbot_2021.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_price_history.py  test_stock_dataset.py  test_util.py
