[metadata]
name = stockbot_2021
version = 0.1.1
author = Ray Alpha
author_email = bill.ray0259@gmail.com
description = 2021s attempt at algorithmic trading
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/billray0259/stockbot_2021
project_urls =
    Bug Tracker = https://github.com/billray0259/stockbot_2021/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src